--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ body {
   background: hsla(0, 0%, 50%, 0.674);
   padding: 30px;
   border-radius: 30px;
+  box-shadow: 0px 0px 28px #b0adade8;
 }
 
 #display {
@@ -39,6 +40,7 @@ body {
   border: none;
   border-radius: 10px;
   background: hsl(0, 0%, 74%);
+  box-shadow: 7px 2px 12px #948f8fe8;
   color: white;
   font-weight: 600;
   cursor: pointer;
